--- a/.github/workflows/elastic_sync.yml
+++ b/.github/workflows/elastic_sync.yml
@@ -19,14 +19,10 @@ jobs:
       - name: Get changed files
         id: changed-files
         uses: tj-actions/changed-files@v44
-    
-        # NOTE: `since_last_remote_commit: true` is implied by default and falls back to the previous local commit.
-  
-      - name: List all changed files
+
+      - name: Run Update Script
         env:
-          ALL_CHANGED_FILES: ${{ steps.changed-files.outputs.all_changed_files }}
-        run: |
-          for file in ${ALL_CHANGED_FILES}; do
-            echo "$file was changed"
-          done
+          ELASTIC_KEY: ${{ secrets.ELASTIC_KEY }}
+          CHANGED_FILES: ${{ steps.changed-files.outputs.all_changed_files }}
+    
 
