--- a/.github/workflows/elastic_sync.yml
+++ b/.github/workflows/elastic_sync.yml
@@ -14,8 +14,12 @@ jobs:
     steps:
       - uses: actions/checkout@v4
         with:
-          fetch-depth: 0  # OR "2" -> To retrieve the preceding commit.
-  
+          fetch-depth: 0  
+
+      - uses: actions/setup-python@v4
+        with:
+          python-version: '3.11.4'
+
       - name: Get changed files
         id: changed-files
         uses: tj-actions/changed-files@v44
@@ -24,5 +28,7 @@ jobs:
         env:
           ELASTIC_KEY: ${{ secrets.ELASTIC_KEY }}
           CHANGED_FILES: ${{ steps.changed-files.outputs.all_changed_files }}
-    
+        run: |          
+          pip install requests
+          python development/update_alert.py
 
