--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -1,36 +1,23 @@
-name: Updating Detections
+name: Metrics
 
 on:
-  push:
-    branches:
-      - main
-    paths:
-      - '**.toml'
   workflow_dispatch:
 
 jobs:
-  elastic-detections-update:
+  metrics:
     runs-on: ubuntu-latest
-    env:
-      ELASTIC_KEY: ${{ secrets.ELASTIC_KEY }}
     steps:
       - uses: actions/checkout@v4
         with:
-          fetch-depth: 0  
-
+          token: ${{ secrets.GH_KEY }}
       - uses: actions/setup-python@v4
         with:
           python-version: '3.11.4'
-
-      - name: Get changed files
-        id: changed-files
-        uses: tj-actions/changed-files@v44
-
-      - name: Run Update Script
-        env:
-          ELASTIC_KEY: ${{ secrets.ELASTIC_KEY }}
-          CHANGED_FILES: ${{ steps.changed-files.outputs.all_changed_files }}
-        run: |          
-          pip install requests
-          python development/update_alert.py
-
+      - run: pip install python-dateutil
+      - run: python development/toml_to_report.py
+      - run: |          
+          git config user.name github-actions
+          git config user.email github-actions@github.com
+          git add .
+          git commit -m "Updating Metrics"
+          git push -f 
