--- a/detections/bat_files_observed_in_http_on_unusual_port.toml
+++ b/detections/bat_files_observed_in_http_on_unusual_port.toml
@@ -1,3 +1,6 @@
+[metadata]
+creation_date = "2024/03/30"
+
 [rule]
 author = ["Joseph Jee"]
 description = "Using Zeek HTTP data, we're looking at .bat file extensions on any destination port that isn't port 80."
